--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>ACTIVITY 4 - LOW POLY SPACESHIP</title>
+    <title>ACTIVITY 3 - CROMLECH</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
